--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,397 +1,115 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Display map navigation controls</title>
-    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
-    <link href="https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.css" type="text/css"/>
-    <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.0.2/mapbox-gl-directions.css" type="text/css"/>
-    <script src="https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.js"></script>
-    <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.min.js"></script>
-    <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.0.2/mapbox-gl-directions.js"></script>
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-      <div class="row">
-	<div class="col-3 justify-content-start" id="map2">
-	  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-	    <div class="carousel-inner">
-	      <div class="carousel-item active">
-		<img class="d-block w-100" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRbZzORQRNq2QIskyueSxq0w-fS-YBGykLeVsjEh_Sgu5H2DrLz&usqp=CAU" alt="First slide">
-	      </div>
-	      <div class="carousel-item">
-		<img class="d-block w-100" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcR_KriWJZXDLoxjS5hAEswLdPDSXroKuXE0rdBE2pH-2WG2jt0v&usqp=CAU" alt="Second slide">
-	      </div>
-	      <div class="carousel-item">
-		<img class="d-block w-100" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRbZzORQRNq2QIskyueSxq0w-fS-YBGykLeVsjEh_Sgu5H2DrLz&usqp=CAU" alt="Third slide">
-	      </div>
-	    </div>
-	    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-	      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-	      <span class="sr-only">Previous</span>
-	    </a>
-	    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-	      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-	      <span class="sr-only">Next</span>
-	    </a>
-	  </div>
-	  <div class="container">
-	    <h2>Teatro degollado</h2>
-	    <h3>Address</h3>
-	    <p>Teatro Degollado, Guadalajara, Jalisco 44100, México</p>
-	    <div class="hours">
-	      <div class="dropdown"><h3>Hours</h3>
-	      </div>
-	      
-	      <div class="bmodal">
-		<button type="button" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#exampleModal">Launch modal</button>
-
-		<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-		  <div class="modal-dialog" role="document">
-		    <div class="modal-content">
-		      <div class="modal-header">
-			<h5 class="modal-title" id="exampleModalLabel">Hours</h5>
-			<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-			  <span aria-hidden="true">&times;</span>
-			</button>
-		      </div>
-		      <div class="modal-body">
-			<div class="row" >
-			  <select class="col form-control form-control-sm">
-			    <option>Lunes</option>
-			    <option>Martes</option>
-			    <option>Miércoles</option>
-			    <option>Jueves</option>
-			    <option>Viernes</option>
-			    <option>Sabado</option>
-			    <option>Domingo</option>
-			  </select>
-			  <select class="col form-control form-control-sm">
-			    <option>1:00 am</option>
-			    <option>2:00 am</option>
-			    <option>3:00 am</option>
-			    <option>4:00 am</option>
-			    <option>5:00 am</option>
-			    <option>6:00 am</option>
-			    <option>7:00 am</option>
-			    <option>8:00 am</option>
-			    <option>9:00 am</option>
-			    <option>10:00 am</option>
-			    <option>11:00 am</option>
-			    <option>12:00 am</option>
-			    <option>13:00 pm</option>
-			    <option>14:00 pm</option>
-			    <option>15:00 pm</option>
-			    <option>16:00 pm</option>
-			    <option>17:00 pm</option>
-			    <option>18:00 pm</option>
-			    <option>19:00 pm</option>
-			    <option>20:00 pm</option>
-			    <option>21:00 pm</option>
-			    <option>22:00 pm</option>
-			    <option>23:00 pm</option>
-			    <option>24:00 pm</option>
-			    
-			  </select>
-			  <select class="col form-control form-control-sm">
-			    <option>1:00 am</option>
-			    <option>2:00 am</option>
-			    <option>3:00 am</option>
-			    <option>4:00 am</option>
-			    <option>5:00 am</option>
-			    <option>6:00 am</option>
-			    <option>7:00 am</option>
-			    <option>8:00 am</option>
-			    <option>9:00 am</option>
-			    <option>10:00 am</option>
-			    <option>11:00 am</option>
-			    <option>12:00 am</option>
-			    <option>13:00 pm</option>
-			    <option>14:00 pm</option>
-			    <option>15:00 pm</option>
-			    <option>16:00 pm</option>
-			    <option>17:00 pm</option>
-			    <option>18:00 pm</option>
-			    <option>19:00 pm</option>
-			    <option>20:00 pm</option>
-			    <option>21:00 pm</option>
-			    <option>22:00 pm</option>
-			    <option>23:00 pm</option>
-			    <option>24:00 pm</option>
-			  </select>
-			  <button class="btn btn-plus"  onclick="myFunction()"><i class="fa fa-plus"></i></button>
-			</div>
-			<div id="addhours"></div>
-			<h4>Servicio</h4>
-			<select class="col-5 form-control form-control-sm">
-			  <option>Domicilio</option>
-			  <option>Recoger en tienda</option>
-			  <option>Sin servicio</option>
-			</select>
-
-			
-			<div class="form-check">
-			  <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-			  <label class="form-check-label" for="defaultCheck1">
-			    Cubrebocas
-			  </label>
-			</div>
-			<div class="form-check">
-			  <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-			  <label class="form-check-label" for="defaultCheck1">
-			    Perfriendly
-			  </label>
-			</div>
-			<div class="form-check">
-			  <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-			  <label class="form-check-label" for="defaultCheck1">
-			    Autoservicio
-			  </label>
-			</div>
-			
-		      </div>
-		      <div class="modal-footer">
-			<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-			<button type="button" class="btn btn-primary">Save changes</button>
-		      </div>
-		    </div>
-		  </div>
-		</div>
-	      </div>
-	    </div>
-
-	    <h3>Reviews</h3>
-	    <div class="reviews">
-	      <img class="user" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS7FFrxhGko3hUyRhuXBo8cpFfx_cdN5z6syFiBHJBJNUyl2SFf&usqp=CAU" alt="user">
-	      <p class="comments">Wonderful!</p>
-	    </div>
-	    <div class="reviews">
-	      <img class="user" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS3rDsZjwyWWmxqi4Rd-6gB-fPiF4S0Y9Lik4DjBQLyW8EjYC68&usqp=CAU" alt="user">
-	      <p class="comments">Very nice!</p>
-	    </div>
-	    <div class="reviews">
-	      <img class="user" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRbZzORQRNq2QIskyueSxq0w-fS-YBGykLeVsjEh_Sgu5H2DrLz&usqp=CAU" alt="user">
-	      <p class="comments">The place is amazing, thanks</p>
-	    </div>
-	    <div class="row justify-content-center">
-	      <button type="button" class="btn btn-link">View all reviews</button>
-	    </div>
-	  </div>
-	</div>
-	<div class="col-9 justify-content-end" id="map"></div>
-      </div>
-    
-      <script>
-
-	function myFunction() {
-  var h = document.getElementById("addhours");
-  h.insertAdjacentHTML("beforeend", '<div class="row" id="addhours"><select class="col form-control form-control-sm"><option>Lunes</option><option>Martes</option> <option>Miércoles</option><option>Jueves</option><option>Viernes</option><option>Sabado</option><option>Domingo</option></select><select class="col form-control form-control-sm"><option>1:00 am</option><option>2:00 am</option><option>3:00 am</option><option>4:00 am</option><option>5:00 am</option><option>6:00 am</option><option>7:00 am</option><option>8:00 am</option><option>9:00 am</option><option>10:00 am</option> <option>11:00 am</option><option>12:00 am</option><option>13:00 pm</option><option>14:00 pm</option><option>15:00 pm</option><option>16:00 pm</option><option>17:00 pm</option><option>18:00 pm</option><option>19:00 pm</option><option>20:00 pm</option><option>21:00 pm</option><option>22:00 pm</option><option>23:00 pm</option><option>24:00 pm</option></select><select class="col form-control form-control-sm"><option>1:00 am</option><option>2:00 am</option><option>3:00 am</option><option>4:00 am</option><option>5:00 am</option><option>6:00 am</option><option>7:00 am</option><option>8:00 am</option><option>9:00 am</option><option>10:00 am</option><option>11:00 am</option><option>12:00 am</option><option>13:00 pm</option><option>14:00 pm</option><option>15:00 pm</option><option>16:00 pm</option><option>17:00 pm</option><option>18:00 pm</option><option>19:00 pm</option> <option>20:00 pm</option><option>21:00 pm</option><option>22:00 pm</option><option>23:00 pm</option><option>24:00 pm</option></select></div>');
+body {
+    margin: 0;
+    padding: 0;
 }
 
-
-	
-mapboxgl.accessToken = 'pk.eyJ1IjoibW9vbm5peSIsImEiOiJja2F5cGpmaTYwbHB3MnRvN3hqanFjZHU0In0.5t0Z1U-kIWbUSSyDys3ToA';
-
-var map = new mapboxgl.Map({
-    container: 'map', // container id
-    style: 'mapbox://styles/mapbox/streets-v11',
-    center: [-77.04, 38.907], // starting position
-    zoom: 12 // starting zoom
-});
-
-map.addControl(
-    new MapboxGeocoder({
-	accessToken: mapboxgl.accessToken,
-	mapboxgl: mapboxgl
-    })
-);
-
-map.addControl(
-    new mapboxgl.GeolocateControl({
-	positionOptions: {
-	    enableHighAccuracy: true
-	},
-	trackUserLocation: true
-    }), 'bottom-right'
-);
-
-// Add zoom and rotation controls to the map.
-map.addControl(
-    new mapboxgl.NavigationControl(),
-    'bottom-right'
-);
-
-
-
- 
-var size = 100;
- 
-// implementation of CustomLayerInterface to draw a pulsing dot icon on the map
-// see https://docs.mapbox.com/mapbox-gl-js/api/#customlayerinterface for more info
-var pulsingDot = {
-width: size,
-height: size,
-data: new Uint8Array(size * size * 4),
- 
-// get rendering context for the map canvas when layer is added to the map
-onAdd: function() {
-var canvas = document.createElement('canvas');
-canvas.width = this.width;
-canvas.height = this.height;
-this.context = canvas.getContext('2d');
-},
- 
-// called once before every frame where the icon will be used
-render: function() {
-var duration = 1000;
-var t = (performance.now() % duration) / duration;
- 
-var radius = (size / 2) * 0.3;
-var outerRadius = (size / 2) * 0.7 * t + radius;
-var context = this.context;
- 
-// draw outer circle
-context.clearRect(0, 0, this.width, this.height);
-context.beginPath();
-context.arc(
-this.width / 2,
-this.height / 2,
-outerRadius,
-0,
-Math.PI * 2
-);
-context.fillStyle = 'rgba(255, 200, 200,' + (1 - t) + ')';
-context.fill();
- 
-// draw inner circle
-context.beginPath();
-context.arc(
-this.width / 2,
-this.height / 2,
-radius,
-0,
-Math.PI * 2
-);
-context.fillStyle = 'rgba(255, 100, 100, 1)';
-context.strokeStyle = 'white';
-context.lineWidth = 2 + 4 * (1 - t);
-context.fill();
-context.stroke();
- 
-// update this image's data with data from the canvas
-this.data = context.getImageData(
-0,
-0,
-this.width,
-this.height
-).data;
- 
-// continuously repaint the map, resulting in the smooth animation of the dot
-map.triggerRepaint();
- 
-// return `true` to let the map know that the image was updated
-return true;
+#map {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    right: 0;
 }
-};
- 
-map.on('load', function() {
-map.addImage('pulsing-dot', pulsingDot, { pixelRatio: 2 });
-map.addSource('points', {
-'type': 'geojson',
-'data': {
-'type': 'FeatureCollection',
-'features': [
-
-{
-'type': 'Feature',
-'properties': {
-'description':
-'<strong>Make it Mount Pleasant</strong><p><a href="http://www.mtpleasantdc.com/makeitmtpleasant" target="_blank" title="Opens in a new window">Make it Mount Pleasant</a> is a handmade and vintage market and afternoon of live entertainment and kids activities. 12:00-6:00 p.m.</p>'
-},
-'geometry': {
-'type': 'Point',
-'coordinates': [-77.007481, 38.876516]
+#map2{
+    padding: 0;
 }
-},
 
-
-{
-'type': 'Feature',
-'properties': {
-'description':
-'<strong>Seersucker Bike Ride and Social</strong><p>Feeling dandy? Get fancy, grab your bike, and take part in this year\'s <a href="http://dandiesandquaintrelles.com/2012/04/the-seersucker-social-is-set-for-june-9th-save-the-date-and-start-planning-your-look/" target="_blank" title="Opens in a new window">Seersucker Social</a> bike ride from Dandies and Quaintrelles. After the ride enjoy a lawn party at Hillwood with jazz, cocktails, paper hat-making, and more. 11:00-7:00 p.m.</p>'
-},
-'geometry': {
-'type': 'Point',
-'coordinates': [-77.052477, 38.943951]
+.mapboxgl-ctrl-geocoder input[type="text"]{
+    padding: 10px 80px 10px 30px;
 }
-},
 
-
-{
-'type': 'Feature',
-'properties': {
-'description':
-'<strong>Capital Pride Parade</strong><p>The annual <a href="http://www.capitalpride.org/parade" target="_blank" title="Opens in a new window">Capital Pride Parade</a> makes its way through Dupont this Saturday. 4:30 p.m. Free.</p>'
-},
-'geometry': {
-'type': 'Point',
-'coordinates': [-77.043444, 38.909664]
+.mapboxgl-popup {
+    max-width: 400px;
+    font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
 }
+
+.row {
+    margin: 0;
 }
-	
-]
+
+.container{
+    padding-right: 20px;
+    padding-left: 20px;
 }
-});
-map.addLayer({
-'id': 'points',
-'type': 'symbol',
-'source': 'points',
-'layout': {
-	'icon-image': 'pulsing-dot',
-	'icon-allow-overlap':true
+
+img{
+    height: 200px;
 }
-	});
 
-	
-map.on('click', 'points', function(e) {
-var coordinates = e.features[0].geometry.coordinates.slice();
-var description = e.features[0].properties.description;
-
-while (Math.abs(e.lngLat.lng - coordinates[0]) > 180) {
-coordinates[0] += e.lngLat.lng > coordinates[0] ? 360 : -360;
+h2{
+    font-size: 1.5rem;
+    margin-top: 1rem;
 }
- 
-new mapboxgl.Popup()
-.setLngLat(coordinates)
-.setHTML(description)
-.addTo(map);
-});
- 
 
-map.on('mouseenter', 'points', function() {
-map.getCanvas().style.cursor = 'pointer';
-});
- 
-map.on('mouseleave', 'points', function() {
-map.getCanvas().style.cursor = '';
-});
-});
+h3{
+    font-size: 1.2rem;
+    margin: 25px 0px 10px 0px;
+    color: #3C4043;
+}
 
-      
-    </script>
- 
-</body>
-</html>
+h4 {
+    font-size: 1rem;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
 
+p {
+    font-size: .9rem;
+    color: #3C4043;
+}
 
+li {
+    list-style: none;
+    font-size: .9rem;
+}
 
+.bmodal {
+    margin: 25px 0px 10px 0px;
+}
+
+.dropdown-item{
+    color: #3C4043;    
+}
+
+#dropdownMenuButton {
+    margin: 0;
+    padding: 0;
+    font-size: 1.2rem;
+    color: #3C4043;
+}
+
+.user{
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+    position: absolute;
+}
+
+.comments{
+    position:relative;
+    margin: 15px 40px;
+
+}
+
+.form-control-sm{
+    margin: 5px 10px 10px 0px;
+}
+
+.form-check{
+    margin: 10px 0;
+}
+
+.btn-plus{
+    background-color: DodgerBlue;
+    border: none;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    justify-content: center;
+    display: flex;
+    margin-top: 5px;
+
+}
